feat: Add Activity Log component with filtering and pagination
- Implemented Activity Log component with HTML and TypeScript files.
- Added filters for searching by action, user, and details.
- Included loading and error states for better user experience.
- Integrated pagination for navigating through activity logs.

feat: Create Course Questions management component

- Developed Course Questions component with form for adding questions.
- Implemented dynamic options for multiple choice and true/false questions.
- Added functionality for deleting questions with confirmation modal.
- Integrated loading and error handling for fetching questions.

style: Add CSS styles for Course Questions component

- Created styles for questions panel, form, and question cards.
- Enhanced UI with hover effects and responsive design.

chore: Update environment configurations for production and development

- Added environment files for production and local development with API URLs.

--- a/cpd-api/.env.example
+++ b/cpd-api/.env.example
@@ -1,4 +1,6 @@
 # Database Configuration
+# For local development use localhost
+# For Plesk production use: plesk.remote.ac
 DB_HOST=localhost
 DB_NAME=mydb
 DB_USER=dev
@@ -6,10 +8,13 @@ DB_PASS=pass
 DB_PORT=5432
 
 # Application Configuration
+# Set to 'production' when deploying
 APP_ENV=development
 APP_DEBUG=true
 
 # CORS Configuration
+# For local development: http://localhost:4200
+# For production: https://WS369808-wad.remote.ac or http://WS369808-wad.remote.ac
 CORS_ALLOWED_ORIGIN=http://localhost:4200
 
 # Session Configuration
