Refactor code structure for improved readability and maintainability

--- a/cpd-api/.env.example
+++ b/cpd-api/.env.example
@@ -14,7 +14,7 @@ APP_DEBUG=true
 
 # CORS Configuration
 # For local development: http://localhost:4200
-# For production: https://WS369808-wad.remote.ac or http://WS369808-wad.remote.ac
+# For production: https://ws369808-wad.remote.ac
 CORS_ALLOWED_ORIGIN=http://localhost:4200
 
 # Session Configuration
