feat: Add SEO configurations including robots.txt and meta tags, and enhance API security and performance with .htaccess.

--- a/cpd-api/.htaccess
+++ b/cpd-api/.htaccess
@@ -16,3 +16,36 @@ Options -Indexes
 
 # Set default charset
 AddDefaultCharset utf-8
+
+# Security Headers
+<IfModule mod_headers.c>
+  # Prevent clickjacking
+  Header always set X-Frame-Options "SAMEORIGIN"
+  
+  # Enable XSS protection
+  Header always set X-Content-Type-Options "nosniff"
+  Header always set X-XSS-Protection "1; mode=block"
+  
+  # HSTS - Force HTTPS (6 months)
+  Header always set Strict-Transport-Security "max-age=15768000; includeSubDomains"
+  
+  # Content Security Policy
+  Header always set Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; font-src 'self' data:; connect-src 'self';"
+  
+  # Referrer Policy
+  Header always set Referrer-Policy "strict-origin-when-cross-origin"
+  
+  # Enable CORS for frontend
+  Header always set Access-Control-Allow-Origin "*"
+  Header always set Access-Control-Allow-Methods "GET, POST, OPTIONS"
+  Header always set Access-Control-Allow-Headers "Content-Type, X-CSRF-Token"
+  Header always set Access-Control-Allow-Credentials "true"
+</IfModule>
+
+# Enable Gzip compression for API responses
+<IfModule mod_deflate.c>
+  AddOutputFilterByType DEFLATE application/json
+  AddOutputFilterByType DEFLATE text/html
+  AddOutputFilterByType DEFLATE text/plain
+  AddOutputFilterByType DEFLATE text/xml
+</IfModule>
