--- a/cpd-api/.htaccess
+++ b/cpd-api/.htaccess
@@ -35,8 +35,8 @@ AddDefaultCharset utf-8
   # Referrer Policy
   Header always set Referrer-Policy "strict-origin-when-cross-origin"
   
-  # Enable CORS for frontend
-  Header always set Access-Control-Allow-Origin "*"
+  # Enable CORS for frontend (specific origin required when using credentials)
+  Header always set Access-Control-Allow-Origin "https://ws369808-wad.remote.ac"
   Header always set Access-Control-Allow-Methods "GET, POST, OPTIONS"
   Header always set Access-Control-Allow-Headers "Content-Type, X-CSRF-Token"
   Header always set Access-Control-Allow-Credentials "true"
