--- a/cpd-api/.htaccess
+++ b/cpd-api/.htaccess
@@ -37,8 +37,8 @@ AddDefaultCharset utf-8
   
   # Enable CORS for frontend (specific origin required when using credentials)
   Header always set Access-Control-Allow-Origin "https://ws369808-wad.remote.ac"
-  Header always set Access-Control-Allow-Methods "GET, POST, OPTIONS"
-  Header always set Access-Control-Allow-Headers "Content-Type, X-CSRF-Token"
+  Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+  Header always set Access-Control-Allow-Headers "Content-Type, X-CSRF-Token, Authorization"
   Header always set Access-Control-Allow-Credentials "true"
 </IfModule>
 
