--- a/cpd-api/.env.example
+++ b/cpd-api/.env.example
@@ -22,3 +22,11 @@ SESSION_LIFETIME=3600
 
 # Security
 PASSWORD_HASH_COST=12
+
+# Mailer Configuration (SMTP)
+SMTP_HOST=localhost
+SMTP_PORT=1025
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM_EMAIL=no-reply@cpd-portal.local
+SMTP_FROM_NAME="CPD Portal"
