--- a/cpd-api/composer.json
+++ b/cpd-api/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "php": ">=7.4",
-        "vlucas/phpdotenv": "^5.0"
+        "vlucas/phpdotenv": "^5.0",
+        "phpmailer/phpmailer": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
